# axiom

./: .env.example  .gitignore  LICENSE  README.md  axiom.db  pyproject.toml
app/: main.py
app/adapters/: __init__.py  base.py  hud.py  router.py  tablet.py  wrist.py
app/ai/: __init__.py  coa_generator.py  prompts.py  replan_engine.py  threat_analyzer.py
app/api/: deps.py
app/api/v1/: router.py
app/api/v1/endpoints/: comms.py  display.py  geo.py  health.py  missions.py  replan.py  targets.py
app/api/v1/routes/: auth.py
app/comms/: __init__.py  audit.py  encryption.py  message_bus.py
app/core/: config.py  logging.py  security.py
app/db/: __init__.py  crud.py  database.py  models.py
app/geo/: __init__.py  geojson_builder.py  map_frame.py  route_geometry.py
app/models/: __init__.py  asset.py  coa.py  enums.py  event.py  mission.py  operator.py  target.py  threat.py  waypoint.py
app/services/: target_manager.py
deploy/: Dockerfile  docker-compose.yml
deploy/tilo/docs/: capability_statement.md
deploy/tilo/scripts/: evaluate.py
frontend/: index.html  login.html
